<resources>
    <string name="app_name">Brick Bash</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_play">PlayActivity</string>
    <string name="time_keeper"> Time: </string>
    <string name="brickTapString">0</string>
    <string name="scoreText"> BrickBits </string>
    <string name="round"> Round </string>
    <string name="tap"> Hits:</string>
    <string name="fourth">4th: </string>
    <string name="fifth">5th: </string>
    <string name="title_activity_leader_board">LeaderBoard</string>
    <string name="menuString">Menu</string>
    <string name="action_reset_brick_bits">Reset BrickBits</string>
    <string name="action_reset_upgrades">Reset Upgrades</string>
    <string name="upgradeTitle">Upgrades</string>
    <string name="clickUpgrade">+Click Power</string>
    <string name="bombUpgrade">Bomb</string>
    <string name="timeUpgrade">+Time</string>
    <string name="nukeUpgrade">Nuke</string>
    <string name="moneyUpgrade">Money</string>
    <string name="swipeUpgrade">Slash Attack</string>
    <string name="plus_brick_bits">+500 BrickBits</string>
</resources>
