<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="trevorwarner.individualgame.PlayActivity"
    android:background="#ffa5e6d2"
    android:visibility="visible"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/scoreText"
            android:id="@+id/scoreTextView"
            android:textSize="25dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center_vertical|left"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_keeper"
            android:id="@+id/timeTextView"
            android:textSize="25dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_vertical|right"
            android:gravity="right"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/upgrade_text_padding" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scoreKeeper"
            android:textSize="20dp"
            android:layout_below="@+id/scoreTextView"
            android:layout_weight="1"
            android:layout_gravity="center_vertical|left"
            android:gravity="left"
            android:layout_marginLeft="@dimen/menuSpacing" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="10.00"
            android:id="@+id/timeKeeper"
            android:textSize="30dp"
            android:layout_below="@+id/scoreTextView"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_vertical|right"
            android:layout_weight="1"
            android:gravity="right"
            android:layout_marginRight="@dimen/menuSpacing" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/brickButton"
            android:src="@drawable/brick"
            android:scaleType="fitCenter"
            android:background="@null"
            android:adjustViewBounds="true"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:visibility="visible"
            android:layout_weight="1"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap"
            android:id="@+id/tapTextView"
            android:textSize="25dp"
            android:layout_below="@+id/brickButton"
            android:layout_toLeftOf="@+id/brickCount"
            android:layout_toStartOf="@+id/brickCount"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingRight="@dimen/upgrade_text_padding" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/brickTapString"
            android:id="@+id/brickCount"
            android:textSize="30dp"
            android:layout_alignBottom="@+id/tapTextView"
            android:layout_alignRight="@+id/timeKeeper"
            android:layout_alignEnd="@+id/timeKeeper"
            android:gravity="center_horizontal|left"
            android:layout_weight="1"
            android:paddingLeft="@dimen/upgrade_text_padding" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="bottom">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:id="@+id/bombButton"
            android:src="@drawable/bomb"
            android:scaleType="fitCenter"
            android:background="@null"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:visibility="invisible" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:id="@+id/nukeButton"
            android:src="@drawable/nuke"
            android:scaleType="fitCenter"
            android:background="@null"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:visibility="invisible" />
    </LinearLayout>


</LinearLayout>
