<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="trevorwarner.individualgame.LeaderBoard"
    android:background="#ff60e6b7">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_activity_leader_board"
        android:id="@+id/LBtextview"
        android:layout_gravity="center_horizontal"
        android:textSize="30dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/imageView2"
            android:src="@drawable/first_trophy"
            android:scaleType="fitXY"
            android:layout_gravity="center_horizontal"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="80dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/firstPlace"
            android:layout_gravity="center_horizontal"
            android:paddingTop="@dimen/LBpadding"
            android:paddingBottom="@dimen/LBpadding"
            android:layout_alignTop="@+id/imageView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="150dp"
            android:textSize="26dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:id="@+id/imageView3"
            android:src="@drawable/second_trophy"
            android:scaleType="fitXY"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="88dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/secondPlace"
            android:layout_gravity="center_horizontal"
            android:paddingTop="@dimen/LBpadding"
            android:paddingBottom="@dimen/LBpadding"
            android:layout_alignTop="@+id/imageView3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="150dp"
            android:textSize="24dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/thirdPlace"
            android:layout_gravity="center_horizontal"
            android:paddingTop="@dimen/LBpadding"
            android:paddingBottom="@dimen/LBpadding"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="150dp"
            android:textSize="22dp" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/imageView4"
            android:src="@drawable/third_trophy"
            android:scaleType="fitXY"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="98dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fourth"
            android:id="@+id/fourthPlaceText"
            android:textColorHighlight="@color/abc_primary_text_material_dark"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_alignTop="@+id/fourthPlace"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="105dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/fifthPlaceText"
            android:text="@string/fifth"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_below="@+id/fourthPlaceText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/fourthPlace"
            android:textSize="20dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/fifthPlace"
            android:textSize="16dp"
            android:layout_alignTop="@+id/fifthPlaceText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="150dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="175dp"
            android:layout_height="50dp"
            android:text="@string/menuString"
            android:id="@+id/menuButton"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</LinearLayout>
