<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffc948"
    tools:context="trevorwarner.individualgame.UpgradesShop"
    android:baselineAligned="false"
    android:useDefaultMargins="true"
    android:columnCount="1"
    android:rowCount="6">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/upgradeTitle"
        android:id="@+id/Title"
        android:layout_row="0"
        android:layout_column="0"
        android:textSize="25dp"
        android:layout_gravity="center_horizontal|right"
        android:paddingRight="@dimen/upgrade_text_padding" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/brickBitView"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="left"
        android:textSize="25dp"
        android:paddingLeft="@dimen/upgrade_text_padding" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/clickUpgrade"
            android:src="@drawable/pointer"
            android:scaleType="fitCenter"
            android:background="@null"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:padding="@dimen/upgrade_padding" />

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/swipeUpgrade"
            android:src="@drawable/swipe"
            android:scaleType="fitCenter"
            android:background="@null"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:padding="@dimen/upgrade_padding" />

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bombButton"
            android:layout_row="1"
            android:layout_column="2"
            android:src="@drawable/bomb"
            android:background="@null"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:padding="@dimen/upgrade_padding" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_rowSpan="1"
        android:gravity="top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_gravity="center"
            android:text="+Click Power"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingRight="@dimen/upgrade_text_padding" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Slash Attack"
            android:id="@+id/textView2"
            android:layout_row="2"
            android:layout_gravity="center|top"
            android:layout_column="1"
            android:layout_weight="1"
            android:gravity="center_horizontal|left"
            android:paddingRight="@dimen/upgrade_text_padding" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Bomb!"
            android:id="@+id/textView3"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_gravity="center|top"
            android:layout_weight="1"
            android:gravity="center_horizontal|left"
            android:paddingRight="@dimen/upgrade_text_padding" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/timerButton"
            android:layout_row="3"
            android:layout_column="0"
            android:src="@drawable/timer"
            android:background="@null"
            android:scaleType="fitCenter"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="@dimen/upgrade_padding" />

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nukeButton"
            android:layout_row="3"
            android:layout_column="1"
            android:src="@drawable/nuke"
            android:background="@null"
            android:scaleType="fitCenter"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="@dimen/upgrade_padding" />

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/moneyButton"
            android:layout_row="3"
            android:layout_column="2"
            android:src="@drawable/moneybag"
            android:background="@null"
            android:scaleType="fitCenter"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="@dimen/upgrade_padding" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/timeUpgrade"
            android:id="@+id/textView5"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|top"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingRight="@dimen/upgrade_text_padding" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/nukeUpgrade"
            android:id="@+id/textView6"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingRight="@dimen/upgrade_text_padding" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/moneyUpgrade"
            android:id="@+id/textView7"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingRight="@dimen/upgrade_text_padding" />
    </LinearLayout>

</GridLayout>